--- a/package.json
+++ b/package.json
@@ -6,9 +6,27 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.9.1",
+    "bootstrap": "^4.5.3",
+    "classnames": "^2.2.6",
+    "font-awesome": "^4.7.0",
+    "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
+    "node-sass": "^5.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-text-transition": "^1.1.2",
+    "reactstrap": "^8.7.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "sal.js": "^0.8.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -36,3 +54,6 @@
     ]
   }
 }
+
+
+
