--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3001
 accessTokenExpiresIn=7777777777777777777777777777777777777777777777
-URL=mongodb+srv://investment:investment@cluster0.awd96.mongodb.net/investment?retryWrites=true&w=majority
+URLa=mongodb+srv://investment:investment@cluster0.awd96.mongodb.net/investment?retryWrites=true&w=majority
 jwtSecret=kwhdkjebc8uj
-URaL=mongodb://localhost/elite
+URL=mongodb://localhost/elite
 GMAIL_USERNAME=kordkud@gmail.com
 GMAIL_PASSWORD=Abdull11%%
