--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ jwtSecret=kwhdkjebc8uj
 URLa=mongodb://localhost/elite
 GMAIL_USERNAME=kordkud@gmail.com
 GMAIL_PASSWORD=Abdull11%%
+GMAIL_PASSWORD=Abdull11%%
