--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-PORT=3001
+PORT=3012
 accessTokenExpiresIn=7777777777777777777777777777777777777777777777
-URL=mongodb+srv://investment:investment@cluster0.awd96.mongodb.net/investment?retryWrites=true&w=majority
+URLw=mongodb+srv://investment:investment@cluster0.awd96.mongodb.net/investment?retryWrites=true&w=majority
 jwtSecret=kwhdkjebc8uj
-URLa=mongodb://localhost/elite
+URL=mongodb://localhost/elite
 GMAIL_USERNAME=kordkud@gmail.com
 GMAIL_PASSWORD=Abdull11%%
 GMAIL_PASSWORD=Abdull11%%
